# xll_math

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE.txt  README.md  xll_linalg.cpp  xll_linalg.h  xll_template.cpp  xll_template.def
.claude/: settings.local.json
cmake/: CompilerSettings.cmake  CompilerWarnings.cmake  Dependencies.cmake  FindXLCall32.cmake
include/: linalg.h
src/: core.cpp  exports.def  linalg.cpp
xll24/: .gitignore  CMakeLists.txt
xll24/cmake/: xll24Config.cmake.in
xll24/include/: XLCALL.H  addin.h  alert.h  defines.h  enum.h  excel.h  export.h  fp.h  fpx.h  handle.h  oper.h  register.h
xll24/lib/: XLCall32.def
xll24/src/: alert.cpp  depends.cpp  doevents.cpp  evaluate.cpp  fpx.c  paste.cpp  py.cpp  range.cpp  xlauto.cpp
